[package]
name = "akaere-ipapi-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
maxminddb = "0.26.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
cidr = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
http-body-util = "0.1"
hyper = "1.1"
ipnet = "2.9"
flate2 = "1.0"
tar = "0.4"
tempfile = "3.8"
walkdir = "2.4"
bincode = "1.3.3"
scraper = "0.19.0"
